# twx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/twx/: module.modulemap  twx.h
src/: border.c  border.h  colors.c  colors.h  modifier_table.c  modifier_table.h  modifiers.c  modifiers.gperf  modifiers.h  space.c  space.h  strutil.c  strutil.h  styledef.c  styledef.h  to_json.c  to_json.h  twx.c  uthash.h
test/: test.c
